cargo-features = ["codegen-backend"]
[package]
name = "how_far"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
goldberg = "0.1.0"

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
