[workspace]
repository = "https://github.com/CodedMasonry/dynamic_signing"
resolver = "2"
members = ["windows_agent", "server"]
default-members = []

[workspace.dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
clap = "4.5.4"
directories = "5.0.1"
env_logger = "0.11.3"
goldberg = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
rcgen = "0.13.0"
rustls = { version = "0.23.4", default-features = false }
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.4.1"
rustyline = "14.0.0"
thiserror = "1.0.58"
tokio = "1.37.0"
tokio-rustls = { version = "0.26.0", default-features = false }

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
