[workspace]
repository = "https://github.com/CodedMasonry/dynamic_signing"
resolver = "2"
members = ["windows_agent", "server", "how_far_types"]
default-members = []

[workspace.dependencies]
anyhow = "1.0.81"
clap = "4.5.4"
directories = "5.0.1"
goldberg = "0.1.0"
log = "0.4.21"
rcgen = "0.13.0"
rustls = { version = "0.23.5", default-features = false }
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.4.1"
thiserror = "1.0.58"
tokio = "1.37.0"
tokio-rustls = { version = "0.26.0", default-features = false }
postcard = "1.0.8"
redb = "2.0.0"
serde = "1.0.197"
sysinfo = "0.30.10"
async-trait = "0.1.80"
chrono = { version = "0.4.38", default-features = false }
axum = "0.7.5"
axum-server = "0.6.0"
ureq = { git = "https://github.com/algesten/ureq.git", default-features = false }

[profile.dev]
debug = 0

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
