[package]
name = "how_far_types"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["std", "now", "clock", "serde"] }
directories.workspace = true
redb.workspace = true
thiserror.workspace = true
strum = { version = "0.26.2", features = ["derive"] }
