[package]
name = "how_far_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
directories = { workspace = true }
log = { workspace = true }
postcard = { workspace = true }
rcgen = { workspace = true }
redb = { workspace = true, features = ["log", "logging"] }
rustls = { workspace = true, features = ["ring", "logging", "std"] }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
rustyline = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true, features = ["logging", "ring"] }
how_far_types = { path = "../how_far_types" }
httparse = { workspace = true }
sysinfo = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["std", "now", "clock", "serde"] }
env_logger = "0.11.3"
