cargo-features = ["codegen-backend"]
[package]
name = "hf_windows_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
goldberg = { workspace = true }
rustls = { workspace = true, features = ["ring", "tls12", "std", "log"] }

[build-dependencies]
directories = { workspace = true }
rustls-pemfile = { workspace = true }
