cargo-features = ["codegen-backend"]
[package]
name = "hf_windows_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
goldberg = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs", "std", "logging"] }
ureq = { workspace = true, features = ["brotli", "tls", "gzip"] }
how_far_types = { path = "../how_far_types" }
base64 = "0.22.0"
getrandom = "0.2.14"
postcard = { workspace = true, features = ["alloc"] }

[build-dependencies]
chrono.workspace = true
directories = { workspace = true }
how_far_types = { path = "../how_far_types" }
postcard = { workspace = true, features = ["alloc"] }
rand = "0.8.5"
redb.workspace = true
rustls-pemfile = { workspace = true }
